pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: alanreboucasp-dev
spec:
  containers:
    - name: nginx
      image: ${IMAGE}
      ports:
        - containerPort: 8080
